[tool.poetry]
name = "competition-analysis"
version = "1"
description = "Competition analysis of amazon tech giant"
authors = ["blecktita <nkwamekusi@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.2.1"
scikit-learn = "^1.6.0"
flask = "^3.1.0"
waitress = "^3.0.2"
pandas = "^2.2.3"
tqdm = "^4.67.1"
seaborn = "^0.13.2"
xgboost = "^2.1.3"
ipywidgets = "^8.1.5"
pyyaml = "^6.0.2"
requests = "^2.32.3"
gunicorn = "^23.0.0"
streamlit = "^1.41.1"
python-dotenv = "^1.0.1"
docker = "^7.1.0"
plotly = "^5.24.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
